--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,300;1,500&display=swap" rel="stylesheet">
 
-    <title>Hello, world!</title>
+
+<!--  Essential META Tags -->
+<meta property="og:title" content="🎉 Александра | Първа Годинка и Свето Кръщене">
+<meta property="og:type" content="article" />
+<meta property="og:image" content="https://alexbirthday.fun/alex.jpg">
+<meta property="og:url" content="https://alexbirthday.fun/">
+<meta name="twitter:card" content="summary_large_image">
+
+
+
+    <title>🎉 Александра | Първа Годинка и Свето Кръщене</title>
   </head>
   <body>
     <style type="text/css">
@@ -33,6 +43,7 @@ p{
   margin-bottom: 5px;
 }
 button{
+  font-size: 12px;
     text-align: center;
     max-width: 400px;
     width: 100%;
